애플리케이션 구조 서문 번역

--- a/patterns/app-structure.html
+++ b/patterns/app-structure.html
@@ -1,19 +1,20 @@
 ---
 layout: default
-title: Application Structure
+title: 애플리케이션 구조
 ---
-<p>Apps come in many varieties that address very different needs. For example:</p>
+<p>앱은 여러 요구 사항에 따라 다양한 형태가 됩니다. 예를 들어:</p>
 
 <ul>
-<li>Apps such as Calculator or Camera that are built around a single focused activity handled from a
-  single screen</li>
-<li>Apps such as Phone whose main purpose is to switch between different activities without deeper
-  navigation</li>
-<li>Apps such as Gmail or Google Play that combine a broad set of data views with deep navigation</li>
+<li>계산기나 카메라와 같은 앱은 하나의 스크린에서 조작되는 하나의
+  집중된 액티비티로 만들어 집니다.</li>
+<li>휴대전화와 같은 앱은 더 깊이 내려가지 않고 동일한 깊이의 다른
+  액티비티 사이를 이동하는 용법을 가집니다.</li>
+<li>Gmail과 Play 스토어와 같은 앱은 깊이 들어가는 데이터 뷰의 큰
+  집합으로 구성되어 있습니다.</li>
 </ul>
-<p>Your app's structure depends largely on the content and tasks you want to surface for your users.</p>
+<p>당신의 앱의 구조는 컨텐츠와 사용자가 사용하길 원하는 작업에 크게 달려있습니다.</p>
 
-<h2 id="general-structure">General Structure</h2>
+<h2 id="general-structure">일반 구조</h2>
 
 
 <p>A typical Android app consists of top level and detail/edit views. If the navigation hierarchy is
