--- a/get-started/creative-vision.html
+++ b/get-started/creative-vision.html
@@ -6,14 +6,17 @@ title: Creative Vision
 <div class="vspace size-1">&#160;</div>
 
 
-<p>Ice Cream Sandwich (Android 4.0) marks a major milestone for Android design. We touched nearly every
-pixel of the system as we expanded the new design approaches introduced in Honeycomb tablets to all
-types of mobile devices. Starting with the most basic elements, we introduced a new font, Roboto,
-designed for high-resolution displays. Other big changes include framework-level action bars on
-phones and support for new phones without physical buttons.</p>
+<p>
+아이스크림 샌드위치(안드로이드 4.0)은 안드로이드 디자인에 있어서 중요한 이정표가 됩니다.
+픽셀 하나하나를 새로 만들었고, 허니컴에 도입되었던 새로운 디자인 방법론을 모바일 기기 전체에 확장했습니다.
+가장 기본적인 요소부터 보면, 우리는 Roboto라는 새로운 고해상도 디스플레이용 글꼴을 만들었습니다.
+또한 폰을 위한 액션 바를 프레임워크 레벨에서 추가했으며, 물리적 버튼이 없는 폰을 위한 지원도 추가했습니다.
+</p>
 
-<p>We focused the design work with three overarching goals for our core apps and the system at large.
-As you design apps to work with Android, consider these goals:</p>
+<p>
+우리는 이 디자인 작업에서 핵심 앱과 전체적인 시스템 레벨에 대한 세 가지 중요한 목표가 있다고 보았습니다.
+안드로이드에 앱을 만들 때에는 다음의 항목들을 고려해주세요.
+</p>
 
 
 <div class="vspace size-1">&#160;</div>
@@ -22,31 +25,38 @@ As you design apps to work with Android, consider these goals:</p>
 <div class="layout-content-row">
   <div class="layout-content-col span-4">
 
-<h4>Enchant me</h4>
-<p>Beauty is more than skin deep. Android apps are sleek and aesthetically pleasing on multiple levels.
-Transitions are fast and clear; layout and typography are crisp and meaningful. App icons are works
-of art in their own right. Just like a well-made tool, your app should strive to combine beauty,
-simplicity and purpose to create a magical experience that is effortless and powerful.</p>
+<h4>마법을 걸어 주세요</h4>
+<p>
+아름다움은 피상적인 것이 아닙니다.
+안드로이드 앱은 날렵하게 보이면서 여러 관점에서 미적인 즐거움을 얻을 수 있습니다.
+화면 전환은 빠르고 깔끔하며, 화면이나 글자는 정갈하고 유의미하게 배치되어 있습니다.
+앱 아이콘은 각자의 권리가 담긴 작품입니다.
+잘 만들어진 도구와 마찬가지로, 여러분의 앱은 아름답고 간단하면서도 쉽고 강력한 마술적 경험을 만든다는 목적을 달성하기 위해 노력해야 합니다.
+</p>
 
   </div>
   <div class="layout-content-col span-5">
 
-<h4>Simplify my life</h4>
-<p>Android apps make life easier and are easy to understand. When people use your app for the first
-time, they should intuitively grasp the most important features. The design work doesn't stop at the
-first use, though. Android apps remove ongoing chores like file management and syncing. Simple tasks
-never require complex procedures, and complex tasks are tailored to the human hand and mind. People
-of all ages and cultures feel firmly in control, and are never overwhelmed by too many choices or
-irrelevant flash.</p>
+<h4>생활을 편리하게</h4>
+<p>
+안드로이드 앱은 생활을 더 쉽게 만들어 주며, 이해하기 쉽습니다.
+여러분의 앱을 사용자가 처음 쓸 때, 가장 중요한 기능이 무엇인지 직관적으로 알 수 있어야 합니다.
+물론 그렇다고 해서 앱을 처음 켤 때만 다른 흐름으로 동작하는 건 아니지만요.
+안드로이드 앱에서는 파일 관리나 싱크와 같은 복잡한 일을 없앱니다.
+간단한 작업에 절대 복잡한 과정이 필요하지 않아야 하고, 복잡한 작업은 사람의 생각과 입력에 맞도록 되어 있습니다.
+나이나 문화에 관계없이 사용자 누구나 안정적으로 조작할 수 있고, 절대 너무 많은 선택지나 불필요한 알림에 뒤덮이지 않아야 합니다.
+</p>
 
   </div>
   <div class="layout-content-col span-4">
 
-<h4>Make me amazing</h4>
-<p>It's not enough to make an app that is easy to use. Android apps empower people to try new things
-and to use apps in inventive new ways. Android lets people combine applications into new workflows
-through multitasking, notifications, and sharing across apps. At the same time, your app should feel
-personal, giving people access to superb technology with clarity and grace.</p>
+<h4>놀라운 경험을 만들어주세요</h4>
+<p>
+앱을 쓰기 편하게 만드는 것만으로는 충분하지 않습니다.
+안드로이드 앱은 사람들이 새로운 것들을 새로운 방식으로 사용할 수 있는 기회를 제공합니다.
+안드로이드는 사용자가 멀티태스킹, 알림, 앱 간 공유 등을 통해 여러 앱을 조합하여 새로운 작업 흐름을 만들 수 있도록 합니다.
+그러면서도, 여러분의 앱은 개인에 딱 맞게 구성되어 사용자에게 새로운 기술을 명확하고 우아하게 제공하어야 합니다.
+</p>
 
   </div>
 </div>
