앱 구조의 일반 구조 번역.

--- a/patterns/app-structure.html
+++ b/patterns/app-structure.html
@@ -17,8 +17,9 @@ title: 애플리케이션 구조
 <h2 id="general-structure">일반 구조</h2>
 
 
-<p>A typical Android app consists of top level and detail/edit views. If the navigation hierarchy is
-deep and complex, category views connect top level and detail views.</p>
+<p>일반적인 안드로이드 앱은 최상위 수준의 뷰와 구체/편집 뷰로
+구성됩니다. 탐색 계층(navigation hierachy)이 깊고 복잡해지면 카테고리
+뷰가 최상위 수준과 구체 뷰들을 연결합니다.</p>
 
 
 <div class="layout-content-row">
@@ -28,18 +29,18 @@ deep and complex, category views connect top level and detail views.</p>
 </div>
   <div class="layout-content-col span-4">
 
-<h4>Top level views</h4>
-<p>The top level of the app typically consists of the different views that your app supports. The views
-either show different representations of the same data or expose an altogether different functional
-facet of your app.</p>
+<h4>최상위 수준 뷰</h4>
+<p>앱의 최상위 수준 뷰는 전형적으로 앱의 지원에 따라 다른 뷰를
+    가집니다. 이 뷰는 같은 데이터에 대해 다른 형태로 표현것과 앱의
+    전적으로 다른 기능적인 면을 모두 보여주고 있습니다.</p>
 <div class="vspace size-3">&#160;</div>
 
-<h4>Category views</h4>
-<p>Category views allow you to drill deeper into your data.</p>
+<h4>카테고리 뷰</h4>
+<p>카테고리 뷰는 당신의 데이터로 더 깊이 내려가게 합니다.</p>
 <div class="vspace size-11">&#160;</div>
 
-<h4>Detail/edit view</h4>
-<p>The detail/edit view is where you consume or create data.</p>
+<h4>구체/편집 뷰</h4>
+<p>구체/편집 뷰는 데이터를 소모하거나 만드는 곳입니다.</p>
 
   </div>
 </div>
