--- a/building-blocks/tabs.html
+++ b/building-blocks/tabs.html
@@ -21,7 +21,7 @@ to the next/previous view, swipe left or right.</p>
   </div>
   <div class="layout-content-col span-7">
 
-    <video width="400" class="with-shadow play-on-hover" autoplay><source src="/design/media/tabs_scrolly.mp4" type="video/mp4"><source src="/design/media/tabs_scrolly.webm" type="video/webm"><source src="/design/media/tabs_scrolly.ogv" type="video/ogg"></source></source></source></video><div class="figure-caption">
+    <video width="400" class="with-shadow play-on-hover" autoplay><source src="../media/tabs_scrolly.mp4" type="video/mp4"><source src="../media/tabs_scrolly.webm" type="video/webm"><source src="../media/tabs_scrolly.ogv" type="video/ogg"></video><div class="figure-caption">
       Scrolling tabs in Google Play.
       <div class="video-instructions">&#160;</div>
     </div>
