앱의 이름을 레퍼런스에 맞추어 변경.

--- a/patterns/swipe-views.html
+++ b/patterns/swipe-views.html
@@ -44,7 +44,7 @@ title: 뷰 스와이프
       <video class="play-on-hover" autoplay><source src="/design/media/swipe_tabs.mp4" type="video/mp4"><source src="/design/media/swipe_tabs.webm" type="video/webm"><source src="/design/media/swipe_tabs.ogv" type="video/ogg"></source></source></source></video>
 </div>
     <div class="figure-caption">
-      탑 레벨 화면에서 스와이프 제스쳐를 사용하는 주소록(People) 앱.
+      최상위 수준 화면에서 스와이프 제스쳐를 사용하는 피플 앱.
       <div class="video-instructions">&#160;</div>
     </div>
 
