비디오 경로 및 파서 오류 수정

--- a/patterns/swipe-views.html
+++ b/patterns/swipe-views.html
@@ -41,7 +41,7 @@ title: 뷰 스와이프
   <div class="layout-content-col span-5">
 
     <div class="framed-galaxynexus-port-span-5">
-      <video class="play-on-hover" autoplay><source src="/design/media/swipe_tabs.mp4" type="video/mp4"><source src="/design/media/swipe_tabs.webm" type="video/webm"><source src="/design/media/swipe_tabs.ogv" type="video/ogg"></source></source></source></video>
+      <video class="play-on-hover" autoplay><source src="../media/swipe_tabs.mp4" type="video/mp4"><source src="../media/swipe_tabs.webm" type="video/webm"><source src="../media/swipe_tabs.ogv" type="video/ogg"></video>
 </div>
     <div class="figure-caption">
       최상위 수준 화면에서 스와이프 제스쳐를 사용하는 피플 앱.
