--- a/building-blocks/dialogs.html
+++ b/building-blocks/dialogs.html
@@ -14,7 +14,7 @@ title: Dialogs
 <li>
 <h4>Optional title region</h4>
 <p> title을 여러분의 dialog에 도입하였습니다. 예를 들자면 사용자가 바꾸려는
-설정의 이을 식별하거나 결정을 요구할 수 있습니다.</p>
+설정의 이름을 식별하거나 결정을 요구할 수 있습니다.</p>
 </li>
 <li>
 <h4>Content area</h4>
