get-started/ui-overview.html 오타 수정.

--- a/get-started/ui-overview.html
+++ b/get-started/ui-overview.html
@@ -2,8 +2,8 @@
 layout: default
 title: UI 개요
 ---
-<p>애플리케이션을 만드면 그 위에 안드로이드의 시스템 UI의 프레임워크가 제공됩니다.
-시스템 UI의 주요 부분으로 홈스크린 경험, 글로벌 디바이스 내비게이션, 그리고 알림이 있습니다.</p>
+<p>애플리케이션을 만들면 그 위에 안드로이드의 시스템 UI의 프레임워크가 제공됩니다.
+시스템 UI의 주요 부분으로 홈 스크린 경험, 글로벌 디바이스 네비게이션, 그리고 알림이 있습니다.</p>
 
 <p>귀하의 애플리케이션은 전반적인 안드로이드 경험에 있어서 일관성과 즐거운 사용 면에서 중요한 역할을 차지하게 될 수 있습니다.
 따라서 우리는 이 장 끝 부분에서 애플리케이션이 이러한 목표를 달성하기 위해 필요한 주요 사항들을 소개하겠습니다.</p>
@@ -11,7 +11,7 @@ title: UI 개요
 <p>먼저 안드로이드 사용자 인터페이스의 주요 측면에 대해 간단히 개요를 훑어보도록 하겠습니다.</p>
 
 
-<h2 id="home-all-apps-recents">홈, 모든 애플리케이션, 그리고 최근 사용한 앱</h2>
+<h2 id="home-all-apps-recents">홈, 모든 애플리케이션, 그리고 최근 앱</h2>
 
 
 <div class="vspace size-1">&#160;</div>
