--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ title:
 <div id="landing-graphic-container">
   <div id="text-overlay">
     <strong>안드로이드 디자인</strong>에 오신 것을 환영합니다. 이 곳에서는 멋진 안드로이드 앱을 어떻게 만들 수 있는지를 배울 수 있습니다.
-    <br><br><a href="get-started/creative-vision.html" class="landing-page-link">Creative Vision</a>
+    <br><br><a href="get-started/creative-vision.html" class="landing-page-link">창조적인 비전</a>
   </div>
 
   <a href="get-started/creative-vision.html">
