애플리케이션 -> 앱, 그외 앞부분 사소하게 다듬음

--- a/get-started/ui-overview.html
+++ b/get-started/ui-overview.html
@@ -2,16 +2,16 @@
 layout: default
 title: UI 개요
 ---
-<p>애플리케이션을 만들면 그 위에 안드로이드의 시스템 UI의 프레임워크가 제공됩니다.
+<p>앱을 만들면 그 위에 안드로이드의 시스템 UI의 프레임워크가 제공됩니다.
 시스템 UI의 주요 부분으로 홈 스크린 경험, 글로벌 디바이스 네비게이션, 그리고 알림이 있습니다.</p>
 
-<p>귀하의 애플리케이션은 전반적인 안드로이드 경험에 있어서 일관성과 즐거운 사용 면에서 중요한 역할을 차지하게 될 수 있습니다.
-따라서 우리는 이 장 끝 부분에서 애플리케이션이 이러한 목표를 달성하기 위해 필요한 주요 사항들을 소개하겠습니다.</p>
+<p>여러분의 앱은 전반적인 안드로이드 경험에 있어서 일관성과 즐거운 사용 면에서 중요한 역할을 차지하게 될 수 있습니다.
+따라서 우리는 이 장 끝 부분에서 앱이 이러한 목표를 달성하기 위해 필요한 주요 사항들을 소개하겠습니다.</p>
 
 <p>먼저 안드로이드 사용자 인터페이스의 주요 측면에 대해 간단히 개요를 훑어보도록 하겠습니다.</p>
 
 
-<h2 id="home-all-apps-recents">홈, 모든 애플리케이션, 그리고 최근 앱</h2>
+<h2 id="home-all-apps-recents">홈, 모든 앱, 그리고 최근 앱</h2>
 
 
 <div class="vspace size-1">&#160;</div>
@@ -22,28 +22,27 @@ title: UI 개요
 
     <img src="../media/ui_overview_home_screen.png"><h4>홈 화면</h4>
 <p>홈은 앱 바로가기, 폴더와 위젯을 올려둘 수 있는 사용자 정의 가능 공간입니다.
-홈 화면에서 좌우로 스와이프하는 것으로 다른 홈 화면 패널을 살펴볼 수 있습니다.</p>
-<p>언제나 아랫쪽에 표시되고 있는 즐겨찾기 트레이는
-지금 표시되고 있는 패널과 관계 없이 
+홈 화면에서 좌우로 스와이프하여 다른 홈 화면 패널을 살펴볼 수 있습니다.</p>
+<p>즐겨찾기 트레이는 항상 아랫쪽에 표시되어, 현재의 패널과 관계 없이 
 가장 중요한 바로 가기 및 폴더를 고정해 표시해줍니다.</p>
-<p>즐겨찾기 트레이 중앙에 위치한 모든 애플리케이션 버튼을 터치해 전체 애플리케이션 및 위젯 목록에 접근할 수 있습니다.</p>
+<p>즐겨찾기 트레이 중앙에 위치한 모든 앱 버튼을 터치해 전체 앱 및 위젯 목록에 접근할 수 있습니다.</p>
 
   </div>
   <div class="layout-content-col span-4">
 
-    <img src="../media/ui_overview_all_apps.png"><h4>모든 애플리케이션 화면</h4>
-<p>모든 애플리케이션 화면에서 디바이스에 설치되어 있는 모든 앱과 위젯 전체 항목을 열람할 수 있습니다.</p>
-<p>사용자는 모든 애플리케이션 화면에서 애플리케이션이나 위젯 아이콘을 끌어 임의의 홈 화면 아무 빈 곳에나 배치할 수 있습니다.</p>
+    <img src="../media/ui_overview_all_apps.png"><h4>모든 앱 화면</h4>
+<p>모든 앱 화면에서 디바이스에 설치되어 있는 모든 앱과 위젯 전체 항목을 열람할 수 있습니다.</p>
+<p>사용자는 모든 앱 화면에서 앱이나 위젯 아이콘을 끌어 임의의 홈 화면 아무 빈 곳에나 배치할 수 있습니다.</p>
 
   </div>
   <div class="layout-content-col span-4">
 
     <img src="../media/ui_overview_recents.png"><h4>최근 앱(Recents) 화면</h4>
-<p>최근 앱은 최근에 사용했던 애플리케이션 간을 이동하는 효율적인 방법을 제공합니다.
+<p>최근 앱은 최근에 사용했던 앱 간을 이동하는 효율적인 방법을 제공합니다.
 최근 앱은 여러 진행중인 작업 사이의 명확한 탐색 경로 또한 제공합니다.</p>
-<p>네비게이션 바 오른쪽에 위치한 최근 앱 버튼은 사용자가 최근에 작업한 순으로 애플리케이션 목록이 표시됩니다.
-이 목록은 가장 아랫쪽부터 가장 나중에 작업했던 애플리케이션이 역순으로 표시되어 구성됩니다.</p>
-<p>애플리케이션을 터치해 해당 앱으로 전환할 수 있습니다. 좌나 우로 스와이프해서 항목을 지울 수도 있습니다.</p>
+<p>네비게이션 바 오른쪽에 위치한 최근 앱 버튼은 사용자가 최근에 작업한 순으로 앱 목록이 표시됩니다.
+이 목록은 가장 아랫쪽부터 가장 나중에 작업했던 앱이 역순으로 표시되어 구성됩니다.</p>
+<p>앱을 터치해 해당 앱으로 전환할 수 있습니다. 좌나 우로 스와이프해서 항목을 지울 수도 있습니다.</p>
 
   </div>
 </div>
@@ -54,7 +53,7 @@ title: UI 개요
 
 <p>시스템 바는 알림 표시, 디바이스 상태 안내 및 디바이스 네비게이션 전용 영역입니다.
 일반적으로 시스템 바는 우리의 앱과 동시에 표시됩니다.
-영화나 이미지와 같이 몰입형 컨텐트를 제공하는 애플리케이션인 경우
+영화나 이미지와 같이 몰입형 컨텐트를 제공하는 앱인 경우
 임시로 시스템 바를 숨겨 사용자가 혼란 없이 전체 화면으로 컨텐트를 즐길 수 있도록 할 수도 있습니다.</p>
 
 
@@ -86,7 +85,7 @@ title: UI 개요
 <p>알림은 사용자가 상태 표시줄을 통해 언제든지 접근할 수 있는 짧은 메시지입니다.
 알림은 업데이트나 일정 알림, 또는 중요하지만 사용자를 방해할 정도는 아닌 정보를 제공합니다.
 상태 표시줄을 아래로 스와이프해 알림 서랍(notifications drawer)을 엽니다.
-알림을 터치하면 해당 알림과 연관되어 있는 애플리케이션을 열게 됩니다.
+알림을 터치하면 해당 알림과 연관되어 있는 앱을 열게 됩니다.
 <a href="../patterns/notifications.html">알림에 대한 세부 사항</a></p>
 
 
@@ -107,7 +106,7 @@ title: UI 개요
 
 
 
-<h2 id="app">일반적인 애플리케이션 UI</h2>
+<h2 id="app">일반적인 앱 UI</h2>
 
 
 
@@ -118,22 +117,22 @@ title: UI 개요
 </div>
   <div class="layout-content-col span-6 with-callouts">
 
-<p>전형적인 안드로이드 애플리케이션은 액션바 및 애플리케이션 켠텐트 영역으로 구성되어 있습니다.</p>
+<p>전형적인 안드로이드 앱은 액션바 및 앱 켠텐트 영역으로 구성되어 있습니다.</p>
 <ol>
 <li>
 <h4>메인 액션 바</h4>
-<p>애플리케이션의 명령 및 통제 센터입니다. 메인 액션 바에는 애플리케이션의 계층과 뷰를 탐색하고
+<p>앱의 명령 및 통제 센터입니다. 메인 액션 바에는 앱의 계층과 뷰를 탐색하고
 중요한 작업들을 다루는 요소들이 담겨 있습니다.</p>
 <p><a href="../patterns/actionbar.html">액션 바에 대한 세부 사항</a></p>
 </li>
 <li>
 <h4>뷰 컨트롤</h4>
-<p>사용자가 애플리케이션이 제공하는 여러 뷰를 전환하도록 합니다.
-뷰는 일반적으로 애플리케이션의 데이터를 다양하게 배치한 것이거나 다양한 기능적 측면으로 이루어져 있습니다.</p>
+<p>사용자가 앱이 제공하는 여러 뷰를 전환하도록 합니다.
+뷰는 일반적으로 앱의 데이터를 다양하게 배치한 것이거나 다양한 기능적 측면으로 이루어져 있습니다.</p>
 </li>
 <li>
 <h4>컨텐트 영역</h4>
-<p>이 공간은 애플리케이션의 컨텐트가 표시되는 공간입니다.</p>
+<p>이 공간은 앱의 컨텐트가 표시되는 공간입니다.</p>
 </li>
 <li>
 <h4>분할 액션 바</h4>
