style/writing 일부 번역

--- a/style/writing.html
+++ b/style/writing.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Writing Style
+title: 문체
 ---
 <style>
 
@@ -53,39 +53,47 @@ title: Writing Style
 }
 
 </style>
-<p>When choosing words for your app:</p>
+<p>앱에 들어갈 메시지를 만들 때에는,</p>
 
 <ol>
 <li>
-<p><strong>Keep it brief.</strong> Be concise, simple and precise. Start with a 30 character limit (including
-   spaces), and don't use more unless absolutely necessary.</p>
+<p><strong>짧게 쓰세요.</strong>
+간결하게, 간단하게, 정확하게.
+우선 30자 제한(공백 포함)을 두고, 정말 필요한 게 아니면 기준을 넘지 마세요.
+</p>
 </li>
 <li>
-<p><strong>Keep it simple.</strong> Pretend you're speaking to someone who's smart and competent, but doesn't
-   know technical jargon and may not speak English very well. Use short words, active verbs, and
-   common nouns.</p>
+<p><strong>간단하게 쓰세요.</strong>
+여러분의 앱과 대화하는 사용자는 똑똑하고 능숙하지만, 기술적 내용을 잘 모르거나 영어에 익숙하지 않은 사람입니다.
+짧은 단어, 동작 동사, 일반적인 명사로 쓰세요.
+</p>
 </li>
 <li>
-<p><strong>Be friendly.</strong> Use contractions. Talk directly to the reader using second person ("you"). If
-   your text doesn't read the way you'd say it in casual conversation, it's probably not the way
-   you should write it. Don't be abrupt or annoying and make the user feel safe, happy and
-   energized.</p>
+<p><strong>친근하게 대하세요.</strong>
+축약어를 쓰세요.
+사용자를 2인칭 대명사(당신, 여러분 등)로 직접 부르세요.
+문장이 일상 대화처럼 보이지 않는다면 그건 보통 그리 좋은 메시지가 아닙니다.
+퉁명스럽고 귀찮게 대하지 말고, 사용자를 편안하게, 기쁘게, 활기차게 해주세요.
+</p>
 </li>
 <li>
-<p><strong>Put the most important thing first.</strong> The first two words (around 11 characters, including
-   spaces) should include at least a taste of the most important information in the string. If they
-   don't, start over.</p>
+<p><strong>가장 중요한 걸 맨 앞에 두세요.</strong>
+첫 두세글자만 봐도 가장 중요한 정보가 뭔지 최소한 감을 잡을 수 있어야 합니다.
+그렇지 않으면 다시 하세요.
+</p>
 </li>
 <li>
-<p><strong>Describe only what's necessary, and no more.</strong> Don't try to explain subtle differences. They
-   will be lost on most users.</p>
+<p><strong>필요한 것 말고는 설명하지 마세요.</strong>
+사소한 차이를 해설하려고 하지 마세요. 대부분은 그냥 잊어버릴 겁니다.
+</p>
 </li>
 <li>
-<p><strong>Avoid repetition.</strong> If a significant term gets repeated within a screen or block of text, find
-   a way to use it just once.</p>
+<p><strong>중복을 피하세요.</strong>
+중요한 용어가 화면이나 문단에 여러 차례 나온다면, 한 번만 쓸 수 있는 방법을 찾으세요.
+</p>
 </li>
 </ol>
-<h2 id="examples">Examples</h2>
+<h2 id="examples">예제</h2>
 
 
 <ol><li class="value-1">
