style/writing: 앞부분 메시지를 뒷부분에 적용하고 남은 부분 일부 번역

--- a/style/writing.html
+++ b/style/writing.html
@@ -97,22 +97,22 @@ title: 문체
 
 
 <ol><li class="value-1">
-<strong>Keep it brief.</strong> From the setup wizard:</li></ol>
+<strong>짧게 쓰세요.</strong> 설치 마법사의 경우:</li></ol>
 <div class="layout-content-row">
   <div class="layout-content-col span-6 list_item_margins">
 
-    <div class="example_label bad">Too formal</div>
+    <div class="example_label bad">너무 형식적이에요</div>
 
     <table class="ui_table good"><tbody><tr><td>
-    Consult the documentation that came with your phone for further instructions.
+    자세한 설명을 위해서는 구입 시 첨부된 도움말 문서를 참고하십시오.
     </td></tr></tbody></table>
 </div>
   <div class="layout-content-col span-6">
 
-    <div class="example_label good">Better</div>
+    <div class="example_label good">더 나은 방향</div>
 
     <table class="ui_table good"><tbody><tr><td>
-    Read the instructions that came with your phone.
+    구입 시 첨부된 도움말을 참고하십시오.
     </td></tr></tbody></table>
 </div>
 </div>
@@ -122,11 +122,11 @@ title: 문체
 
 
 <ol><li class="value-2">
-<strong>Keep it simple.</strong> From the Location settings screen:</li></ol>
+<strong>간단하게 쓰세요.</strong> From the Location settings screen:</li></ol>
 <div class="layout-content-row">
   <div class="layout-content-col span-6 list_item_margins">
 
-    <div class="example_label bad">Confusing</div>
+    <div class="example_label bad">혼란스러워요</div>
 
     <table class="ui_table bad">
 <thead><tr>
@@ -136,14 +136,15 @@ title: 문체
       </tr></thead>
 <tbody><tr>
 <td>
-        When locating, accurate to street level.
+        위치를 찾을 때, 거리 수준의 정확도를 얻습니다.
+
         </td>
       </tr></tbody>
 </table>
 </div>
   <div class="layout-content-col span-6">
 
-    <div class="example_label good">Better</div>
+    <div class="example_label good">더 나은 방향</div>
 
     <table class="ui_table good">
 <thead><tr>
@@ -153,7 +154,7 @@ title: 문체
       </tr></thead>
 <tbody><tr>
 <td>
-        Let apps use satellites to pinpoint your location.
+        애플리케이션이 GPS를 사용하여 현재 위치를 정확하게 찾도록 합니다.
         </td>
       </tr></tbody>
 </table>
@@ -165,7 +166,7 @@ title: 문체
 
 
 <ol><li class="value-3">
-<strong>Be friendly.</strong> Dialog that appears when an application
+<strong>친근하게 대하세요.</strong> Dialog that appears when an application
 crashes:</li></ol>
 <div class="layout-content-row">
   <div class="layout-content-col span-6 list_item_margins">
@@ -221,7 +222,7 @@ crashes:</li></ol>
 <div class="vspace size-1">&#160;</div>
 
 
-<ol><li class="value-4"><strong>Put the most important thing first.</strong></li></ol>
+<ol><li class="value-4"><strong>가장 중요한 걸 맨 앞에 두세요.</strong></li></ol>
 <div class="layout-content-row">
   <div class="layout-content-col span-6 list_item_margins">
 
@@ -265,7 +266,7 @@ crashes:</li></ol>
 <div class="vspace size-1">&#160;</div>
 
 
-<ol><li class="value-5"><strong>Describe only what's necessary, and no more.</strong></li></ol>
+<ol><li class="value-5"><strong>필요한 것 말고는 설명하지 마세요.</strong></li></ol>
 <div class="layout-content-row">
   <div class="layout-content-col span-6 list_item_margins">
 
